--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "swipe": "^1.7.7",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
