--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-svg": "^16.1.7",
     "swipe": "^1.7.7",
     "swiper": "^9.1.1"
   },
